force-app/main/default/objects/FOPS_Skill_Requirement__c/FOPS_Skill_Requirement__c.object-meta.xml
<CustomObject>
    <description>Junction: Opportunity (JD) to Skill (Product2). NOT OpportunityLineItem - line items roll into Amount.</description>
    <label>Skill Requirement</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Requirements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>