force-app/main/default/objects/FOPS_Skill_Requirement__c/fields/FOPS_Importance__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Importance__c</fullName>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
                <default>true</default>
                <label>Must Have</label>
            </value>
            <value>
                <fullName>Strong Preference</fullName>
            </value>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>