force-app/main/default/objects/FOPS_Skill_Requirement__c/fields/FOPS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Opportunity__c</fullName>
    <inlineHelpText>The pursuit (JD) this skill requirement belongs to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Skill Requirements</relationshipLabel>
    <relationshipName>FOPS_Skill_Requirements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>