force-app/main/default/objects/FOPS_Skill_Requirement__c/fields/FOPS_Skill__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Skill Requirements</relationshipLabel>
    <relationshipName>FOPS_Skill_Requirements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>