force-app/main/default/objects/FOPS_Skill_Requirement__c/fields/FOPS_Weight__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Weight__c</fullName>
    <label>Weight</label>
    <formula>CASE(TEXT(FOPS_Importance__c), 'Must Have', 3, 'Strong Preference', 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>