force-app/main/default/objects/FOPS_Skill_Requirement__c/fields/FOPS_Years_Required__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Years_Required__c</fullName>
    <label>Years Required</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>